# test-b2b

./: .dockerignore  .env  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yaml
backend/: Carte_Identite.xlsx  Etat des crÇances.xlsx  __init__.py  fake_data.json  main.py
backend/api/: cache_routes.py  client_externe_data_routes.py  client_interne_data_routes.py  client_search_routes.py  debug_routes.py  test_orm_api.py
backend/services/: __init__.py
backend/services/dataiku/: client.py  pipeline_writer.py  readers.py  transformers.py
backend/services/db/: configdb.py  database_engine.py
backend/services/db/models/: company_sheet_input.py
backend/services/rate_limiters/: global_concurrency_limiter.py  phantom_buster_rate_limiter.py
backend/services/scrapping/: __init__.py  base_plugin.py  pipeline.py  plugin_manager.py
backend/services/scrapping/embedding/: __init__.py  dataiku_embedding_engine.py  embedding_engine.py
backend/services/scrapping/filtering/: __init__.py  semantic_filtering_engine.py
backend/services/scrapping/plugins/: linkedin.py  rss.py
backend/utils/: send_scraped_data_to_dataiku.py
config/: config.py  config.yaml
docker/: Dockerfile.backend  Dockerfile.frontend
frontend/: app.py
frontend/components/: complaints_section.py  contact_section.py  credit_status.py  header.py  identity_card.py  news_section.py  offers_potential.py  partnership_description.py  revenue_chart.py  search_bar.py
frontend/models/: company_sheet.py
frontend/services/: api_client.py
frontend/static/: styles.css
tests/unit/: test_database_engine.py  test_embedding_engine.py  test_global_concurrency_limiter.py  test_linkedin_plugin.py  test_rate_limiter.py  test_rss_plugin.py  test_semantic_filtering_engine.py
